--- a/package.json
+++ b/package.json
@@ -9,14 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@hookform/resolvers": "^3.3.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@types/react-native-svg-charts": "^5.0.12",
+    "date-fns": "^2.30.0",
+    "expo": ">=49.0.0-0 <50.0.0",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "intl": "^1.2.5",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-hook-form": "^7.46.1",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-uuid": "^2.0.1",
+    "styled-components": "^6.0.7",
+    "typescript": "^5.2.2",
+    "victory-native": "^36.6.11",
+    "yup": "^1.2.0",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-native": "^0.72.2",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
+    "react-native-svg-transformer": "^1.1.0"
   },
   "private": true
 }
